---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"\n            function allocate_unbounded()  {\n                let memPtr := mload(64)\n            }\")"
---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  └╼ body
    └╼ declare - memPtr:u256
      └╼ mload(u32): u256
        └╼ 64:u32
